--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="android:windowBackground">@drawable/launch_background</item>
     </style>
     <!-- 设置弹框模式 2  -->
-    <style name="Theme.ActivityDialogStyle" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.ActivityDialogStyle" parent="android:Theme.DeviceDefault.Light.NoActionBar">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:backgroundDimEnabled">true</item>
